chatbot page is working!!!!

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://priyankalsharma1575:NeverMinD2407@cluster0.qafcxsw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+GEMINI_API_KEY=AIzaSyBovD99V1mo7oTeinvY2q03NRktn35yHH4
