`feat: updated expo-router types and added expo-audio dependency`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
     "baseUrl": ".", // Add this line: "." means the project root (where this tsconfig.json is)
     "paths": {
